--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@types/react": "^17.0.19",
     "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sharp": "^0.29.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.2",
